# mov_dynamic

./: README.md  pyproject.toml
src/mov_dynamic/: api.py  parse.py  select.py
